--- a/docs/styles.css
+++ b/docs/styles.css
@@ -32,6 +32,7 @@ body {
 header {
     padding-top: 126px;
     background: url('./images/bg-header-desktop.png') no-repeat top center;
+    background-size: contain;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -595,6 +596,7 @@ footer ul li a:hover {
 
     header {
         background: url('./images/bg-header-mobile.png') no-repeat top center;
+        background-size: contain;
     }
 
 }
